Update RPi playbook

--- a/rpi_playbook.yaml
+++ b/rpi_playbook.yaml
@@ -18,3 +18,9 @@
     apt:
       name: prometheus
       state: present
+
+  - name: Ensure Prometheus is running
+    service:
+      name: prometheus
+      state: started
+      enabled: yes
